--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <P>
         Hola esta es mi pagina web bienvenidos
-        sigueme para mas consejos.
+        sigueme para mas consejos.Utiliza tu potencial.
     </P>
 </body>
 </html>
